# ai-agents-tutorials

./: .gitignore  LICENSE  README.MD
custom-rag/: .gitignore  README.md  commands.md
ecommerce_data_scraper/: README.md  main.py  products.csv  utils.py
ecommerce_data_scrapper/: requirements.txt  results.csv
home_renovation_assistant/: .env.example  .gitignore  Procfile  README.md  agent.py  app.py  gdocs_export.py  requirements.txt
influencer_marketing/: .env.example  README.md  requirements.txt  webhook_server.py
influencer_marketing_reporting/: README.md
listing_manager_tutorial/: .env.example  langgraph.json  (+3 more)
local_ai_outlook_invoice_classifier/: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  test_agent.py
local_ai_outlook_invoice_classifier/services/: agent_service.py  document_service.py  graph_service.py  subscription_service.py  webhook_service.py
rag-system/backend/: .env.example  Dockerfile.postgres  flyway.conf  pyproject.toml
rag-system/backend/app/api/: routes.py
rag-system/backend/app/db/migrations/: V1__Create_document_schema.sql
rag-system/backend/app/db/repositories/: document_chunks_repository.py  document_repository.py
rag-system/backend/app/rag/chunking/: markdown_chunker.py
rag-system/backend/app/rag/chunking/examples/: test_chunker.py
rag-system/backend/app/rag/documents/: annual-report-2025.md  commentary-cfo.md
rag-system/backend/app/rag/parsers/: pdf_parser.py
rag-system/backend/app/rag/reranking/examples/: test_reranker.py
rag-system/backend/app/rag/storage/: document_store.py
(+105 files in other folders)
