[project]
name = "panacea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "logfire>=4.3.3",
    "logging>=0.4.9.6",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.7.1",
    "pymupdf4llm>=0.0.27",
    "uvicorn>=0.35.0",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.2",
    "regex>=2023.12.25",
    "linkify-it-py>=2.0.3",
    "psycopg>=3.2.10",
    "psycopg-pool>=3.2.6",
    "tiktoken>=0.11.0",
    "voyageai>=0.3.5",
    "sentence-transformers>=5.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
